<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/modifier_agence_siret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/siret"/>

    <EditText
        android:id="@+id/modifier_agence_raison_sociale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/raison_sociale"/>

    <EditText
        android:id="@+id/modifier_agence_voie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/voie"
        android:gravity="center" />

    <EditText
        android:id="@+id/modifier_agence_cp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cp"/>

    <EditText
        android:id="@+id/modifier_agence_ville"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/ville"/>

    <Button
        android:id="@+id/modifier_agence_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/modifier_agence_button"/>


</LinearLayout>
