<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom" />

    <EditText
        android:id="@+id/connexion_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mdp" />

    <EditText
        android:id="@+id/connexion_motDePasse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connexion_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/connexion_inscription_bouton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

</LinearLayout>
